[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "araon-core"
version = "1.0.0"
description = "Shared runtime library for ARAON desktop tools"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "gspread==6.1.4",
  "oauth2client==4.1.3",
  "selenium==4.28.1",
  "playwright==1.60.0",
  "webdriver-manager==4.0.2",
  "keyring==25.6.0",
  "requests==2.32.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["araon_core*"]
