[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "araon-core"
version = "1.0.1"
description = "Shared runtime library for ARAON desktop tools"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "gspread==6.1.4",
  "oauth2client==4.1.3",
  "playwright==1.60.0",
  "keyring==25.6.0",
  "requests==2.32.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["araon_core*"]
